--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
         
     <!-- css -->
     <link rel="stylesheet" href="./estilos/style.css">
+    <link rel="stylesheet" href="./css/estilos2.css">
 </head>
 <body>
     <header>
