--- a/paginas/labombonera.html
+++ b/paginas/labombonera.html
@@ -16,6 +16,7 @@
         
     <!-- css -->
     <link rel="stylesheet" href="../estilos/style.css">
+    <link rel="stylesheet" href="../css/estilos2.css">
 
 </head>
 <body>
@@ -66,6 +67,7 @@
             </div>
         </div>
     </section>
+    <!-- galeria -->
     <section class="galeria">
         <div>
             <div class=" d-flex align-items-center justify-content-center">
