hice responsive todas las paginas

--- a/paginas/contactanos.html
+++ b/paginas/contactanos.html
@@ -48,11 +48,11 @@
     <section class="contactanos">
         <div class="container-fluid">
             <div class="row">
-                <div class="col-lg-6 mt-2">
+                <div class=" col-12 col-lg-6 mt-2">
                     <h1>Contactanos</h1>
                     <p class="fs-4">¡Nos interesa tu opinion! Si tenes alguna consulta, comentario o queres ponerte en contacto con nosotros, llena el formulario y en breve nos contactaremos con vos.</p>
                 </div>
-                <div class=" formulario col-lg-6 mt-2">
+                <div class=" formulario col-12 col-lg-6 mt-2">
                     <div>
                       <label for="nombre">Nombre:</label>
                       <input type="text" class="form-control" id="nombre">
