--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                 </div>
                 <!-- cards -->
                 <div class="row justify-content-center align-items-center">
-                   <div class="col-lg-3 mb-3 bvp">
+                   <div class="col-lg-3 mb-3 col-6 bvp">
                         <div class="card" style="width: 18rem;">
                             <img src="./medios/boca-pereira.webp" class="card-img-top" alt="bocaVsPereira">
                             <div class="card-body">
@@ -86,7 +86,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-lg-3 mb-3 rojo">
+                    <div class="col-lg-3 mb-3 col-6 rojo">
                         <div class="card" style="width: 18rem;">
                             <img src="./medios/rojo_.webp" class="card-img-top" alt="rojo">
                             <div class="card-body">
