--- a/index.html
+++ b/index.html
@@ -13,6 +13,13 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
+    <!-- AOS -->
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+    <!-- animate.css -->
+    <link
+    rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
+
         
     <!-- css -->
     <link rel="stylesheet" href="./estilos/style.css">
@@ -23,7 +30,7 @@
     <!-- menu -->
     <nav class="navbar navbar-expand-lg fondo fs-5">
       <div class="container-fluid">
-          <a class="navbar-brand" href="../index.html"><img src="./medios/logo.png" alt="escudoDeBoca"></a>
+          <a class="navbar-brand" href="../index.html"><img src="./medios/logo.png" class="logo" alt="escudoDeBoca"></a>
      
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#menu" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
@@ -46,11 +53,11 @@
         <!-- titulo y banner -->
         <section>
           <div class="titulo d-flex align-items-center justify-content-center">
-              <h1>Club Atletico Boca Juniors</h1>
+              <h1 class="animate__animated animate__backInDown">Club Atletico Boca Juniors</h1>
             </div>
       </section>
         <!-- presentacion -->
-        <section class="presentacion">
+        <section class="presentacion animate__animated animate__backInLeft animate__delay-0s" >
             <div class="container-fluid">
                 <div class="row">
                   <div class="col-lg-6">
@@ -68,7 +75,7 @@
         <section class="noticias">
             <div class="container-fluid">
                 <div class="row">
-                  <div class="col not1">
+                  <div class="col not1" data-aos="fade-right">
                     <h2 class="fs-1">Boca hoy</h2>
                     <h3 class="fs-1">Boca hoy: la lesión de Pol Fernández, el regreso de Exequiel Zeballos y últimas noticias.</h3>
                     <img src="./medios/boca-entrenamiento_.webp" alt="entrenamiento">
@@ -125,6 +132,8 @@
         </div>
     </footer>    
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
-
+    <script>
+        AOS.init();
+      </script>
 </body>
 </html>
