--- a/paginas/contactanos.html
+++ b/paginas/contactanos.html
@@ -13,6 +13,12 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
+    <!-- AOS -->
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+    <!-- animate.css -->
+    <link
+    rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
         
     <!-- css -->
     <link rel="stylesheet" href="../estilos/style.css">
@@ -25,7 +31,7 @@
         <!-- menu -->
         <nav class="navbar navbar-expand-lg fondo fs-5">
             <div class="container-fluid">
-                <a class="navbar-brand" href="../index.html"><img src="../medios/logo.png" alt="escudoDeBoca"></a>
+                <a class="navbar-brand" href="../index.html"><img src="../medios/logo.png" class="logo" alt="escudoDeBoca"></a>
            
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#menu" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -46,7 +52,7 @@
    </header>
    <main>
     <section class="contactanos">
-        <div class="container-fluid">
+        <div class="container-fluid animate__animated animate__slideInLeft">
             <div class="row">
                 <div class=" col-12 col-lg-6 mt-2">
                     <h1>Contactanos</h1>
@@ -100,6 +106,8 @@
         </div>
     </footer>    
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
-
+    <script>
+        AOS.init();
+      </script>
 </body>
 </html>
