--- a/paginas/hitoshistoricos.html
+++ b/paginas/hitoshistoricos.html
@@ -13,6 +13,12 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
+    <!-- AOS -->
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+    <!-- animate.css -->
+    <link
+    rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
         
     <!-- css -->
     <link rel="stylesheet" href="../estilos/style.css">
@@ -24,7 +30,7 @@
         <!-- menu -->
         <nav class="navbar navbar-expand-lg fondo fs-5">
           <div class="container-fluid">
-              <a class="navbar-brand" href="../index.html"><img src="../medios/logo.png" alt="escudoDeBoca"></a>
+              <a class="navbar-brand" href="../index.html"><img src="../medios/logo.png" class="logo" alt="escudoDeBoca"></a>
          
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#menu" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                   <span class="navbar-toggler-icon"></span>
@@ -47,11 +53,11 @@
     <!-- titulo y banner -->
     <section>
         <div class="hitos d-flex align-items-center justify-content-center">
-            <h1>Hitos Historicos</h1>
+            <h1 class="animate__animated animate__zoomIn">Hitos Historicos</h1>
           </div>
     </section>
         <section>
-            <div class="la-sexta container-fluid">
+            <div class="la-sexta container-fluid animate__animated animate__zoomIn">
                 <div class="row">
                     <h2>La Sexta Libertadores</h2>
                     <div class="col-lg-6">
@@ -86,7 +92,7 @@
         </section>
        <section>
         <div class="intercontinental container-fluid">
-            <div class="row">
+            <div class="row" data-aos="flip-up" >
                 <h2>Intercontinental 2003</h2>
                 <div class="d-flex justify-content-center col-lg-6">   
                 <div id="carouselExampleIndicators" class="carousel slide mb-3">
@@ -141,6 +147,8 @@
         </div>
     </footer>    
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
-
+    <script>
+      AOS.init();
+    </script>
 </body>
 </html>
