hice full responsive la pag

--- a/index.html
+++ b/index.html
@@ -64,9 +64,7 @@
                     <p class="fs-3">La historia del Club Atlético Boca Juniors transcurre desde 1905 hasta la actualidad siendo el fútbol desde los comienzos la esencia del club y, aunque posteriormente el crecimiento de la institución promovió el desarrollo de otras actividades como las bochas, básquet, entre otros, aquel permaneció como la disciplina deportiva sobre la cual se sustenta la entidad y la que le valió su reconocimiento a nivel nacional e internacional. Es el equipo con mayor cantidad de títulos oficiales en la historia del fútbol masculino argentino. En el plano internacional es la 3ra institución con mayor cantidad de copas en el mundo a nivel confederativo e interconfederativo (18) y la primera en el continente americano, empatando con Independiente de Argentina. También posee 4 títulos internacionales AFA/AUF que son contabilizados por FIFA, Conmebol y AFA, cerrando con un total de 22 títulos (1° en América). A nivel local cuenta con 35 campeonatos de primera división Argentina (29 de la era profesional y 6 de la era amateur) y también con 16 copas nacionales, siendo actualmente el equipo más ganador en la historia. </p>
                   </div>
                   <div class="col-lg-6 mb-3 d-flex align-items-center justify-content-center">
-                    <div class="embed-responsive embed-responsive-16by9">
                       <iframe class="video-pres embed-responsive-item" width="560" height="315" src="https://www.youtube.com/embed/4NWhzu5JQf0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-                    </div>
                   </div>   
                 </div>
             </div>
@@ -84,29 +82,29 @@
                 </div>
                 <!-- cards -->
                 <div class="row justify-content-center align-items-center">
-                   <div class="col-lg-3 mb-3 col-6 bvp">
-                        <div class="card" style="width: 18rem;">
-                            <img src="./medios/boca-pereira.webp" class="card-img-top" alt="bocaVsPereira">
+                   <div class="col-lg-3 col-md-3 col-6 bvp">
+                        <div class="card" >
+                            <img src="./medios/not1.png" class="card-img-top" alt="bocaVsPereira">
                             <div class="card-body">
-                            <p class="card-text text-center">Depotivo Pereira golpeo a Boca en Colombia y se complica la clasificacion</p>
+                            <p class="card-text text-center">Depotivo Pereira golpeo a Boca en Colombia</p>
                             <a class="d-flex justify-content-center" href="#" class="btn">Ver Mas</a>
                             </div>
                         </div>
                     </div>
-                    <div class="col-lg-3 mb-3 col-6 rojo">
-                        <div class="card" style="width: 18rem;">
-                            <img src="./medios/rojo_.webp" class="card-img-top" alt="rojo">
+                    <div class="col-lg-3 col-md-3 col-6 rojo">
+                        <div class="card">
+                            <img src="./medios/not1 (1).png" class="card-img-top" alt="rojo">
                             <div class="card-body">
                             <p class="card-text text-center">Marcos Rojo volverá a jugar en la Reserva de Boca contra Arsenal</p>
                             <a class="d-flex justify-content-center" href="#" class="btn">Ver Mas</a>
                             </div>
                         </div>
                     </div>
-                    <div class="col-lg-3 mb-3 medina">
-                        <div class="card" style="width: 18rem;">
-                            <img src="./medios/cristian-medina.webp" class="card-img-top" alt="medina">
+                    <div class="col-lg-3 col-md-3 col-6 medina">
+                        <div class="card">
+                            <img src="./medios/not1 (2).png" class="card-img-top" alt="medina">
                             <div class="card-body">
-                            <p class="card-text text-center">Cristian Medina pide pista en Boca: sus números en el ciclo de Jorge Almirón</p>
+                            <p class="card-text text-center">Cristian Medina pide pista en Boca: sus números en la temporada</p>
                             <a class="d-flex justify-content-center" href="#" class="btn">Ver Mas</a>
                             </div>
                         </div>
