--- a/paginas/contactanos.html
+++ b/paginas/contactanos.html
@@ -58,7 +58,7 @@
                     <h1>Contactanos</h1>
                     <p class="fs-4">¡Nos interesa tu opinion! Si tenes alguna consulta, comentario o queres ponerte en contacto con nosotros, llena el formulario y en breve nos contactaremos con vos.</p>
                 </div>
-                <div class=" formulario col-12 col-lg-6 mt-2">
+                <form class=" formulario col-12 col-lg-6 mt-2">
                     <div>
                       <label for="nombre">Nombre:</label>
                       <input type="text" class="form-control" id="nombre">
@@ -83,7 +83,7 @@
                       <label class="form-check-label" for="checkbox">Acepto los términos y condiciones</label>
                     </div>
                     <button type="button" class="btn mb-3 mt-2">Enviar</button>
-                  </div>
+                </form>
             </div>
         </div>
     </section>
