--- a/paginas/hitoshistoricos.html
+++ b/paginas/hitoshistoricos.html
@@ -67,13 +67,13 @@
                         <div id="carouselExampleFade" class="carousel slide carousel-fade">
                             <div class="carousel-inner">
                               <div class="carousel-item active">
-                                <img src="../medios/carrusel1.jpg" class="d-block w-100" alt="roman">
+                                <img src="../medios/1920px x 1080px.png" class="d-block w-100" alt="roman">
                               </div>
                               <div class="carousel-item">
-                                <img src="../medios/carrusel2.jpg" class="d-block w-100" alt="equipo">
+                                <img src="../medios/1920px x 1080px (2).png" class="d-block w-100" alt="equipo">
                               </div>
                               <div class="carousel-item">
-                                <img src="../medios/bannerhh.jpg" class="d-block w-100" alt="roman-y-martin">
+                                <img src="../medios/1920px x 1080px (1).png" class="d-block w-100" alt="roman-y-martin">
                               </div>
                             </div>
                             <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleFade" data-bs-slide="prev">
@@ -103,13 +103,13 @@
                     </div>
                     <div class="carousel-inner">
                       <div class="carousel-item active">
-                        <img src="../medios/2003.jpg" class="d-block w-100" alt="equipo">
+                        <img src="../medios/carrusel (1).png" class="d-block w-100" alt="equipo">
                       </div>
                       <div class="carousel-item">
-                        <img src="../medios/bianchi.jpg" class="d-block w-100" alt="bianchi">
+                        <img src="../medios/carrusel (2).png" class="d-block w-100" alt="battaglia">
                       </div>
                       <div class="carousel-item">
-                        <img src="../medios/bocavsmilan.jpg" class="d-block w-100" alt="tevez">
+                        <img src="../medios/carrusel.png" class="d-block w-100" alt="tevez">
                       </div>
                     </div>
                     <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
