--- a/paginas/labombonera.html
+++ b/paginas/labombonera.html
@@ -68,7 +68,7 @@
                     </p>
                 </div>
                 <div class="col-lg-6 d-flex align-items-center justify-content-center">
-                    <iframe width="560" height="315" src="https://www.youtube.com/embed/swxMHnaPsDycE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                    <iframe width="560" height="315" src="https://www.youtube.com/embed/swxMHPsDycE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
                 </div>
             </div>
         </div>
