--- a/paginas/plantel2023.html
+++ b/paginas/plantel2023.html
@@ -64,97 +64,97 @@
                 <div class="container d-flex justify-content-center align-items-center">
                     <div>
                         <div class="row espacios">
-                            <div class="col-6 col-lg-3 ">
-                                <div class="card romero" style="width: 15rem;">
+                            <div class="col-6 col-md-6 col-lg-3 ">
+                                <div class="card romero">
                                     <img src="../medios/romeroo.jpg" class="card-img-top" alt="romero">
                                     <div class="card-body d-flex flex-column mb-1 justify-content-center align-items-center">
-                                        <div class="p-1">Sergio Romero </div>
-                                        <div class="p-1">Arquero</div>
+                                        <p>Sergio Romero</p>
+                                        <p>Arquero</p>
                                     </div>
                                 </div>
                             </div>
-                            <div class="col-6 col-lg-3">
-                                <div class="card langoni" style="width: 15rem;">
+                            <div class="col-6 col-md-6 col-lg-3">
+                                <div class="card langoni">
                                     <img src="../medios/langoniperfil.jpg" class="card-img-top" alt="langoni">
                                     <div class="card-body d-flex flex-column mb-1 justify-content-center align-items-center">
-                                        <div class="p-1">Luca Langoni </div>
-                                        <div class="p-1">Delantero</div>
+                                       <p>Luca Langoni</p>
+                                       <p>Delantero</p>
                                     </div>
                                 </div>
                             </div>
-                            <div class="col-6 col-lg-3">
-                                <div class="card benedetto" style="width: 15rem;">
+                            <div class="col-6 col-md-6 col-lg-3">
+                                <div class="card benedetto">
                                     <img src="../medios/benedetto.jpg" class="card-img-top" alt="benedetto">
                                     <div class="card-body d-flex flex-column mb-1 justify-content-center align-items-center">
-                                        <div class="p-1">Dario Benedetto </div>
-                                        <div class="p-1">Delantero</div>
+                                        <p>Dario Benedetto</p>
+                                        <p>Delantero</p>
                                     </div>
                                 </div>
                             </div>
-                            <div class="col-6 col-lg-3">
-                                <div class="card oscar" style="width: 15rem;">
+                            <div class="col-6 col-md-6 col-lg-3">
+                                <div class="card oscar">
                                     <img src="../medios/romeroperfil.jpg" class="card-img-top" alt="oscar-romero">
                                     <div class="card-body d-flex flex-column mb-1 justify-content-center align-items-center">
-                                        <div class="p-1">Oscar Romero </div>
-                                        <div class="p-1">Mediocampista</div>
+                                        <p>Oscar Romero</p>
+                                        <p>Mediocampista</p>
                                     </div>
                                 </div>
                             </div>
                         </div>
                         <div class="row espacios">
-                          <div class="col-6 col-lg-3">
-                            <div class="card fernandez" style="width: 15rem;">
+                          <div class="col-6 col-md-6 col-lg-3">
+                            <div class="card fernandez">
                                 <img src="../medios/fernandezperfil.jpg" class="card-img-top" alt="fernandez">
                                 <div class="card-body d-flex flex-column mb-1 justify-content-center align-items-center">
-                                    <div class="p-1">Ezequiel Fernandez </div>
-                                    <div class="p-1">Mediocampista</div>
+                                   <p>Ezequiel Fernandez</p>
+                                   <p>Mediocampista</p>
                                 </div>
                             </div>
                           </div>
-                          <div class="col-6 col-lg-3">
-                            <div class="card varela" style="width: 15rem;">
+                          <div class="col-6 col-md-6 col-lg-3">
+                            <div class="card varela">
                                 <img src="../medios/varelaperfil.jpg" class="card-img-top" alt="varela">
                                 <div class="card-body d-flex flex-column mb-1 justify-content-center align-items-center">
-                                    <div class="p-1">Alan Varela </div>
-                                    <div class="p-1">Mediocampista</div>
+                                    <p>Alan Varela</p>
+                                    <p>Mediocampista</p>
                                 </div>
                             </div>
                           </div>
-                          <div class="col-6 col-lg-3">
-                            <div class="card weigandt" style="width: 15rem;">
+                          <div class="col-6 col-md-6 col-lg-3">
+                            <div class="card weigandt">
                                 <img src="../medios/weigandtperfil.jpg" class="card-img-top" alt="weigandt">
                                 <div class="card-body d-flex flex-column mb-1 justify-content-center align-items-center">
-                                    <div class="p-1">Marcelo Weigandt </div>
-                                    <div class="p-1">Defensor</div>
+                                   <p>Marcelo Weigandt</p>
+                                   <p>Defensor</p>
                                 </div>
                             </div>
                           </div>
-                          <div class="col-6 col-lg-3">
-                            <div class="card cristian" style="width: 15rem;">
+                          <div class="col-6 col-md-6 col-lg-3">
+                            <div class="card cristian">
                                 <img src="../medios/medina.jpg" class="card-img-top" alt="medina">
                                 <div class="card-body d-flex flex-column mb-1 justify-content-center align-items-center">
-                                    <div class="p-1">Cristian Medina </div>
-                                    <div class="p-1">Mediocampista</div>
+                                    <p>Cristian Medina</p>
+                                    <p>Mediocampista</p>
                                 </div>
                             </div>
                           </div>
                         </div>
                         <div class="row espacios">
-                            <div class="col-6 col-lg-3">
-                                <div class="card figal" style="width: 15rem;">
+                            <div class="col-6 col-md-6 col-lg-3">
+                                <div class="card figal">
                                     <img src="../medios/figal.jpg" class="card-img-top" alt="figal">
                                     <div class="card-body d-flex flex-column mb-1 justify-content-center align-items-center">
-                                        <div class="p-1">Nicolas Figal </div>
-                                        <div class="p-1">Defensor</div>
+                                        <p>Nicolas Figal</p>
+                                        <p>Defensor</p>
                                     </div>
                                 </div>
                             </div>
-                            <div class="col-6 col col-lg-3">
-                                <div class="card marcos" style="width: 15rem;">
+                            <div class="col-6 col-md-6 col-lg-3">
+                                <div class="card marcos">
                                     <img src="../medios/rojoperfil.jpg" class="card-img-top" alt="rojo">
                                     <div class="card-body d-flex flex-column mb-1 justify-content-center align-items-center">
-                                        <div class="p-1">Marcos Rojo </div>
-                                        <div class="p-1">Defensor</div>
+                                       <p>Marcos Rojo</p>
+                                       <p>Defensor</p>
                                     </div>
                                 </div>
                             </div>
