--- a/index.html
+++ b/index.html
@@ -74,46 +74,46 @@
         </section>
         <!-- noticias -->
         <section class="noticias">
-            <div class="container-fluid">
-                <div class="row">
-                  <div class="col not1" data-aos="fade-right">
-                    <h2 class="fs-1">Boca hoy</h2>
-                    <h3 class="fs-1">Boca hoy: la lesión de Pol Fernández, el regreso de Exequiel Zeballos y últimas noticias.</h3>
-                    <img src="./medios/boca-entrenamiento_.webp" alt="entrenamiento">
-                    <p class="fs-2 mt-2">El <strong><em>Xeneize</em></strong>     ya pone todas las fichas en el partido del jueves frente a Arsenal en Sarandí. Ayer por la mañana, Guillermo Fernández se realizó estudios que arrojaron una lesión muscular en el cuádriceps derecho, por lo que sería baja, al menos, por las próximas dos semanas, a la espera del parte médico oficial. Por otro lado, Exequiel Zeballos continúa con su puesta a punto. Si bien no hay una fecha estipulada de regreso, todavía le quedan tres semanas de rehabilitación y podría volver a las canchas a finales de junio</p>    
-                  </div>
+                <div class="container-fluid">
+                    <div class="row">
+                    <div class="col not1" data-aos="fade-right">
+                        <h2 class="fs-1">Boca hoy</h2>
+                        <h3 class="fs-1">Boca hoy: la lesión de Pol Fernández, el regreso de Exequiel Zeballos y últimas noticias.</h3>
+                        <img src="./medios/boca-entrenamiento_.webp" alt="entrenamiento">
+                        <p class="fs-2 mt-2">El <strong><em>Xeneize</em></strong>     ya pone todas las fichas en el partido del jueves frente a Arsenal en Sarandí. Ayer por la mañana, Guillermo Fernández se realizó estudios que arrojaron una lesión muscular en el cuádriceps derecho, por lo que sería baja, al menos, por las próximas dos semanas, a la espera del parte médico oficial. Por otro lado, Exequiel Zeballos continúa con su puesta a punto. Si bien no hay una fecha estipulada de regreso, todavía le quedan tres semanas de rehabilitación y podría volver a las canchas a finales de junio</p>    
+                    </div>
+                    </div>
                 </div>
                 <!-- cards -->
-                <div class="row justify-content-center align-items-center">
-                   <div class="col-lg-3 col-md-3 col-6 bvp">
-                        <div class="card" >
-                            <img src="./medios/not1.png" class="card-img-top" alt="bocaVsPereira">
+                <div class="boca-hoy">
+                    <div class="card fabra">
+                            <img src="./medios/not1.png" alt="pereiraVsBoca">
                             <div class="card-body">
-                            <p class="card-text text-center">Depotivo Pereira golpeo a Boca en Colombia</p>
-                            <a class="d-flex justify-content-center" href="#" class="btn">Ver Mas</a>
+                                <p>Deportivo Pereira golpeo a Boca en Colombia</p>
                             </div>
+                            <div>
+                                <a class="btn" href="#">Ver Mas</a>
+                            </div>
+                    </div> 
+                    <div class="card marcos-rojo">
+                        <img src="./medios/not1 (1).png" alt="marcos-rojo">
+                        <div class="card-body">
+                            <p>Rojo se entrena con el grupo y volvera a jugar con la reserva</p>
+                        </div>
+                        <div>
+                            <a class="btn" href="#">Ver Mas</a>
                         </div>
                     </div>
-                    <div class="col-lg-3 col-md-3 col-6 rojo">
-                        <div class="card">
-                            <img src="./medios/not1 (1).png" class="card-img-top" alt="rojo">
-                            <div class="card-body">
-                            <p class="card-text text-center">Marcos Rojo volverá a jugar en la Reserva de Boca contra Arsenal</p>
-                            <a class="d-flex justify-content-center" href="#" class="btn">Ver Mas</a>
-                            </div>
+                    <div class="card medina">
+                        <img src="./medios/not1 (2).png" alt="medina">
+                        <div class="card-body">
+                            <p>El gran presente de Crsitian Medina vuelve loco a los hinchas Xeneizes</p>
                         </div>
-                    </div>
-                    <div class="col-lg-3 col-md-3 col-6 medina">
-                        <div class="card">
-                            <img src="./medios/not1 (2).png" class="card-img-top" alt="medina">
-                            <div class="card-body">
-                            <p class="card-text text-center">Cristian Medina pide pista en Boca: sus números en la temporada</p>
-                            <a class="d-flex justify-content-center" href="#" class="btn">Ver Mas</a>
-                            </div>
+                        <div>
+                            <a class="btn" href="#">Ver Mas</a>
                         </div>
-                    </div>
-                </div>
-            </div>        
+                    </div>     
+                </div>  
         </section>
     </main>
     <!-- footer -->
